plugins {
	id 'org.springframework.boot' version '2.3.4.RELEASE'
	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
	id 'java'
}

group = 'uk.nhs.adaptors'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.apache.httpcomponents:httpclient:4.5.12'
    implementation 'ca.uhn.hapi.fhir:hapi-fhir-base:5.1.0'
    implementation 'ca.uhn.hapi.fhir:hapi-fhir-structures-dstu3:5.1.0'
    implementation 'com.github.spullara.mustache.java:compiler:0.9.5'
    implementation 'org.springframework:spring-jms:5.2.6.RELEASE'
    implementation 'org.apache.qpid:qpid-jms-client:0.51.0'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation('org.springframework.boot:spring-boot-starter-test') {
		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
	}
}

bootJar {
    mainClassName = 'uk.nhs.adaptors.gp2gp.GP2GPApplication'
}

test {
	useJUnitPlatform()
}
